--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,56 @@
       margin: 0;
       padding: 0;
     }
+
+    .header {
+      width: 100%;
+      height: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    nav {
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+    }
+
+    ul {
+      display: flex;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    li {
+      width: 80px;
+      height: 100%;
+      margin: 0 24px;
+      background-color: #f1f1f1;
+    }
+
+    li.has-popover {
+
+    }
   </style>
 </head>
 <body>
+  <div class="header">
+    <nav>
+      <ul>
+        <li><a href="#">Test</a></li>
+        <li><a href="#">Test</a></li>
+        <li><ss-popover></ss-popover></li>
+        <li class="has-popover"><a href="#" class="popover-toggle">Test</a></li>
+      </ul>
+    </nav>
+  </div>
 
   <ss-button color="primary" type="raised" onclick="openModal()">Open</ss-button>
  
-  <ss-modal close-outside="false" backdrop="true">
+  <ss-modal close-outside="true" backdrop="false">
     <ss-button color="primary" type="flat" onclick="closeModal()">close</ss-button>
     <div slot="title">Title Here</div>
     <span slot="subtitle">Subtitle Here</span>
