use slotted <option>s instead of optionsAsString

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,10 @@
     </div>
     <div>
       <ss-input type="email" placeholder="Email"></ss-input>
-      <ss-input type="select" options-as-string="['Loser', 'Dunker']"></ss-input>
+      <ss-input type="select">
+        <option>Testing</option>
+        <option>Another</option>
+      </ss-input>
     </div>
     <ss-button color="primary" type="flat">Submit</ss-button>
   </div>
