fix floating label
This is fixed by using a js-added class ".has-value" instead of relying on `required` and :valid

--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,14 @@
 </head>
 <body>
 
-  <!-- <ss-button color="primary" type="raised" onclick="openModal()">Open</ss-button>
+  <ss-button color="primary" type="raised" onclick="openModal()">Open</ss-button>
  
   <ss-modal close-outside="false" backdrop="true">
     <ss-button color="primary" type="flat" onclick="closeModal()">close</ss-button>
     <div slot="title">Title Here</div>
     <span slot="subtitle">Subtitle Here</span>
     <button slot="backdrop-close-button">Close</button>
-  </ss-modal> -->
+  </ss-modal>
 
   <div style="padding: 16px;">
     <div>
@@ -39,6 +39,9 @@
         <option>Testing</option>
         <option>Another</option>
       </ss-input>
+    </div>
+    <div>
+      <ss-input type="textarea" placeholder="Description"></ss-input>
     </div>
     <ss-button color="primary" type="flat">Submit</ss-button>
   </div>
