add red outline for invalid value

--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
 
   <div style="padding: 16px;">
     <div>
-      <ss-input placeholder="First Name"></ss-input>
-      <ss-input placeholder="Last Name"></ss-input>
+      <ss-input placeholder="First Name" required></ss-input>
+      <ss-input placeholder="Last Name" required></ss-input>
     </div>
     <div>
       <ss-input type="email" placeholder="Email"></ss-input>
