--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,10 @@
     <ss-button color="primary" type="flat">Submit</ss-button>
   </div>
 
+  <ss-table columns="[{header: 'First Name', id: 'firstName'}]">
+        
+  </ss-table>
+
 
   <script>
     const $ = (selector) => document.querySelector(selector)
