nav and title logic update

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <ss-topbar template="dashboard">
+  <ss-topbar nav template="dashboard">
     <div slot="tool-1">
       <ss-popover align="right" offset-x="144">
       </ss-popover>
