add notification provider

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
     <ss-button color="primary" type="flat">Submit</ss-button>
   </div>
 
+  <ss-test></ss-test>
 
   <script>
     const $ = (selector) => document.querySelector(selector)
