use stencil-fragment, clean up code

--- a/src/index.html
+++ b/src/index.html
@@ -40,14 +40,14 @@
   </ss-topbar>
 
 
-  <!-- <ss-button color="primary" type="raised" onclick="openModal()">Open</ss-button> -->
+  <ss-button color="primary" type="raised" onclick="openModal()">Open</ss-button>
  
-  <!-- <ss-modal close-outside="true" backdrop="false">
+  <ss-modal close-outside="true" backdrop="true">
     <ss-button color="primary" type="flat" onclick="closeModal()">close</ss-button>
     <div slot="title">Title Here</div>
     <span slot="subtitle">Subtitle Here</span>
     <button slot="backdrop-close-button">Close</button>
-  </ss-modal> -->
+  </ss-modal>
 
   <div style="padding: 16px;">
     <div>
