add buttons + fix button css

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,10 @@
         </i>
       </ss-button>
   </div>
+  <div style="display:flex; justify-content: flex-start; align-items: center;">
+    <ss-button onclick="openLeftSidebar()">Open Left Sidebar</ss-button>
+    <ss-button onclick="openRightSidebar()">Open Left Sidebar</ss-button>
+  </div>
 
 </ss-sheath>
 
