--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <ss-topbar nav template="dashboard">
+  <ss-topbar template="dashboard">
     <div slot="sidebar-button">
       <ss-button type="icon" ripple="dark" onclick="openLeftSidebar()">
         <i class="material-icons" style="color: rgba(0,0,0,.54)">
@@ -36,13 +36,16 @@
     </div>
   </ss-topbar>
   <ss-sheath>
-    <ss-sidebar id="left-sidebar">
+    <div slot="sidebar">
+      <ss-sidebar id="left-sidebar">
+      </ss-sidebar>
+      <ss-sidebar id="right-sidebar" position="end" state="closed" mode="over" backdrop="false">
+      </ss-sidebar>
 
-    </ss-sidebar>
+    </div>
 
-    <ss-sidebar id="right-sidebar" position="end" state="closed" mode="over" backdrop="false">
 
-    </ss-sidebar>
+
 
 
   
