--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <ss-topbar template="dashboard">
     <div slot="sidebar-button">
       <ss-button type="icon" ripple="dark" onclick="openLeftSidebar()">
-        <i class="material-icons" style="color: rgba(0,0,0,.54)">
+        <i class="material-icons" style="color: #888">
         menu
         </i>
       </ss-button>
