added list + fixed sheath css

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,27 @@
 
     </div>
 
+    <ss-list>
+      <ul>
+        <li>
+          <a href="#">Test 1</a>
+          <ul>
+            <li><a href="#">Test</a></li>
+            <li><a href="#">Test</a></li>
+            <li><a href="#">Test</a></li>
+            <li><a href="#">Test</a></li>
+            <li><a href="#">Test</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul>
+        <li></li>
+      </ul>
+      <ul>
+        <li></li>
+      </ul>
+    </ss-list>
+
 
 
 
